[gd_scene load_steps=3 format=3 uid="uid://p6nwsjm680cj"]

[ext_resource type="Script" path="res://Scripts/Buttons/Main Menu/PauseButton.gd" id="1_fjila"]
[ext_resource type="Texture2D" uid="uid://c4tj0r0y5urk0" path="res://icon.svg" id="2_57yuf"]

[node name="TextureButton" type="TextureButton"]
custom_minimum_size = Vector2(200, 50)
size_flags_vertical = 0
script = ExtResource("1_fjila")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
bbcode_enabled = true
text = "[center]Text button[/center]"
scroll_active = false

[node name="Arrow" type="Sprite2D" parent="."]
position = Vector2(40, 13.8889)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_57yuf")

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
